...
    <string name="noimageselected">No Image(s) selected</string>
    <string name="requestimageselection">Please select atleast ONE image to upload</string>
    <string name="selectallString">Select All</string>
    <string name="unselectallString">Deselect All</string>
    <string name="maxuploadString">Please select upto 10 images only</string>
    <string name="maxuploadHeaderString">Maximum Upload Limit</string>
    <string name="encounterDetailsLabel"><u>Encounter Details</u></string>
    <string name="mobiledatacost">Data charges may apply. Do you agree?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="userdetails">User Details</string>
    <string name="thankyou">Hurray!</string>
    <string name="sync_completed">Upload Sucessfull</string>
...
